--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@ pre code {
 
 
 <h1 class="title toc-ignore">Peng Chen</h1>
+<h3 class="subtitle">Data Scientist | Consultant</h3>
 
 </div>
 
 
 <hr />
-<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I like to explore recent advances in the data science, AI/ML, and programming world. If you want to know more about me, you you can find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
+<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I like to explore recent advances in the data science, AI/ML, and programming. If you want to know more about me, please find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
 
 
 
