--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ pre code {
 
 
 <hr />
-<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I like to explore recent advances in the data science, AI/ML, and programming. If you want to know more about me, please find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
+<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I enjoy exploring recent advances in the data science, AI/ML, and programming. If you would like to know more about me, please find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
 
 
 
