--- a/index.html
+++ b/index.html
@@ -169,8 +169,33 @@ pre code {
 </div>
 
 
-<hr />
+<div id="section" class="section level1 tabset tabset-fade tabset-pills">
+<h1 class="tabset tabset-fade tabset-pills"></h1>
+<div id="about-me" class="section level2">
+<h2>About Me</h2>
 <p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I enjoy exploring recent advances in the data science, AI/ML, and programming. If you would like to know more about me, please find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
+</div>
+<div id="recommended" class="section level2">
+<h2>Recommended</h2>
+<ul>
+<li><a href="https://r4ds.had.co.nz/">R for Data Science</a></li>
+<li><a href="https://adv-r.hadley.nz/">Advanced R</a></li>
+<li><a href="https://r-pkgs.org/">R Packages</a></li>
+<li><a href="https://www.tmwr.org/">Tidy Modeling with R</a></li>
+<li><a href="https://www.tidyverse.org/blog/">Tidyverse Blog</a></li>
+<li><a href="http://appliedpredictivemodeling.com/">Applied Predictive Modeling</a></li>
+<li><a href="https://web.stanford.edu/~hastie/CASI/">Computer Age Statistical Inference</a></li>
+</ul>
+</div>
+<div id="posts" class="section level2">
+<h2>Posts</h2>
+<ul>
+<li><a href="posts/2021-03-08_a-trick-to-reduce-severe-sql-duplication.html">A Trick to Reduce Severe SQL Duplication</a></li>
+<li><a href="posts/2021-03-03_explore-demographic-empolyment-data-with-julia-silge.html">Explore Demographic Empolyment Data with Julia Silge</a></li>
+<li><a href="posts/2021-03-02_learn-tidy-evaluation-from-daniel-chen.html">Learn Tidy Evaluation from Daniel Chen</a></li>
+</ul>
+</div>
+</div>
 
 
 
