--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ pre code {
 <h1 class="tabset tabset-fade tabset-pills"></h1>
 <div id="about-me" class="section level2">
 <h2>About Me</h2>
-<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I enjoy exploring recent advances in the data science, AI/ML, and programming. If you would like to know more about me, please find my resume <a href="docs/Resume_Peng_Chen.pdf">here</a>.</p>
+<p>Hi there, welcome! My names is Peng, and I work in the Life Sciences industry. In my spare time, I enjoy exploring recent advances in the data science, AI/ML, and programming. If you would like to know more about me, please find my resume <a href="docs/peng-chen-resume.pdf">here</a>.</p>
 </div>
 <div id="recommended" class="section level2">
 <h2>Recommended</h2>
