--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ pre code {
 <li><a href="https://www.tidyverse.org/blog/">Tidyverse Blog</a></li>
 <li><a href="http://appliedpredictivemodeling.com/">Applied Predictive Modeling</a></li>
 <li><a href="https://web.stanford.edu/~hastie/CASI/">Computer Age Statistical Inference</a></li>
+<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm">Introduction to Probability</a></li>
 </ul>
 </div>
 </div>
